--- a/dev/index.html
+++ b/dev/index.html
@@ -11,8 +11,8 @@
     <a-scene>
         <a-assets></a-assets>
         <a-entity my-component geometry="primitive: box" material="shader:my-shader" position="0 1 -3"></a-entity>
-        <a-entity tracked-controls="controller: 0; idPrefix: OpenVR" my-controller></a-entity>
-        <a-entity tracked-controls="controller: 1; idPrefix: Vive" my-controller></a-entity>
+        <a-entity geometry="primitive: box" material="color: gold" vive-controls="hand: left" my-controller></a-entity>
+        <a-entity geometry="primitive: box" material="color: blue" vive-controls="hand: right" my-controller></a-entity>
     </a-scene>
 </body>
 
